# 99-haskell-problems

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  format.sh  ninety-nine-problems.cabal  problem01.hs
.github/workflows/: build.yml  test.yml
src/: Problem01.hs
test/: Problem01Spec.hs  ProblemXXSpec.hs.template
